# zt-shell

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.ai-assisted/: TODO.md  history-prompt.md
.ai-assisted/markdown/: arch.md  commands.md  frontend.md  index.md  monitor.md  release.md  sftp.md  ssh-core.md  transfer.md
.github/workflows/: release.yml
src/: App.vue  api.ts  editorWindows.ts  main.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ssh/: manager.rs  mod.rs  monitor.rs  proxy.rs  session.rs  sftp.rs  transfer.rs  types.rs
src/components/: AppDialog.vue  BottomPanel.vue  ConnectionEditor.vue  ConnectionManager.vue  FileManager.vue  Icon.vue  MonitorPanel.vue  ProxySettings.vue  SettingsDialog.vue  Terminal.vue  TerminalPanel.vue  TextEditorDialog.vue  TextEditorWindow.vue  TitleBar.vue  TransferPanel.vue
src/composables/: useEscClose.ts
src/stores/: connections.ts  monitor.ts  proxies.ts  sessions.ts  settings.ts  transfers.ts
